# Medical-Image-Generation-with-GANs

./: .gitignore  DISCLAIMER.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: eval_config.yaml  train_config.yaml
demo/: app.py
notebooks/: medical_image_generation_demo.ipynb
scripts/: evaluate.py  train.py
src/data/: __init__.py
src/eval/: __init__.py
src/train/: __init__.py
src/utils/: __init__.py
tests/: test_data.py  test_models.py
